--- a/templates/about.html
+++ b/templates/about.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>SuccessConnect</title>
+    <title>T for Travel</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="" />
     <meta name="author" content="http://webthemez.com" />
@@ -28,7 +28,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                        <a class="navbar-brand" href="index.html"><img style="height: 60px; width: 250px;" src="../static/img/black-logo.png" alt="logo" /></a>
+                        <a class="navbar-brand" href="{{ url_for('index') }}"><img style="height: 60px; width: 250px;" src="../static/img/black-logo.png" alt="logo" /></a>
                     </div>
                     <div class="navbar-collapse collapse ">
                         <ul class="nav navbar-nav">
