--- a/templates/index.html
+++ b/templates/index.html
@@ -34,9 +34,9 @@
                     <div class="navbar-collapse collapse">
                         <ul class="nav navbar-nav">
                             <li class="active"><a href="index.html">Home</a></li>
-                            <li><a href="../templates/about.html">About Us</a></li>
+                            <li><a href="{{ url_for('about') }}">About Us</a></li>
                             <li><a href="contact.html">Contact Us</a></li>
-                            <li><a href="../templates/login.html">Sign Up</a></li>
+                            <li><a href="{{ url_for('login') }}">Sign Up</a></li>
                         </ul>
                     </div>
                 </div>
