--- a/templates/login.html
+++ b/templates/login.html
@@ -32,10 +32,10 @@
                     </div>
                     <div class="navbar-collapse collapse ">
                         <ul class="nav navbar-nav">
-                            <li><a href="index.html">Home</a></li>
+                            <li><a href="{{ url_for('index') }}">Home</a></li>
                             <li><a href="contact.html">Contact</a></li>
-                            <li><a href="about.html">About</a></li>
-                            <li class="active"><a href="login.html">Sign Up</a></li>
+                            <li class="active"><a href="about.html">About</a></li>
+                            <li><a href="./login.html">Sign Up</a></li>
                         </ul>
                     </div>
                 </div>
