--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                        <a class="navbar-brand" href="index.html"><img style="height: 60px; width: 250px;" src="../static/img/black-logo.png" alt="logo" /></a>
+                        <a class="navbar-brand" href="{{ url_for('index') }}"><img style="height: 60px; width: 250px;" src="../static/img/black-logo.png" alt="logo" /></a>
                     </div>
                     <div class="navbar-collapse collapse">
                         <ul class="nav navbar-nav">
