changes contact us

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>SuccessConnect</title>
+    <title>TforTravel:ContactUs</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="" />
     <!-- css -->
@@ -111,9 +111,8 @@
 						Mathura-281406<br>
 						</address>
                             <p>
-                                <i class="icon-phone "></i> +91 12345 67891<br>
-                                <i class="icon-envelope-alt "></i> info@successconnect.in
-                            </p>
+                                <i class="icon-phone "></i> +91 1234567891<br>
+                                <i class="icon-envelope-alt "></i> info@tfortravel.in                            </p>
                         </div>
                     </div>
                     <div class="col-lg-4 ">
@@ -130,11 +129,11 @@
                     </div>
                     <div class="col-lg-4 ">
                         <div class="widget ">
-                            <h5 class="widgetheading ">Latest posts</h5>
+                            <h5 class="widgetheading ">Helpful Links</h5>
                             <ul class="link-list ">
-                                <li><a href="# ">Kubernetes and its use-cases</a></li>
-                                <li><a href="# ">GitHub Copilot , AI programmer that helps you code better</a></li>
-                                <li><a href="# ">MongoDB as Database</a></li>
+                                <li><a href="https://www.euttaranchal.com/tourism/dehradun.php">Dehradun Travel Guide</a></li>
+                                <li><a href="https://mybiz.makemytrip.com/v2/">Travel Agent Companies - Simplifying Business Travel</a></li>
+                                <li><a href="https://www.cozi.com/blog/vacation-packing-checklist/">Vacation Packing Checklist</a></li>
                             </ul>
                         </div>
                     </div>
@@ -146,7 +145,7 @@
                         <div class="col-lg-6 ">
                             <div class="copyright ">
                                 <p>
-                                    <span>&copy; SuccessConnect, All right reserved. </span>
+                                    <span>&copy; T for Travel, All right reserved. </span>
                                 </p>
                             </div>
                         </div>
