--- a/templates/contact.html
+++ b/templates/contact.html
@@ -35,7 +35,12 @@
                             <li><a href="{{ url_for('index')}}">Home</a></li>
                             <li><a href="{{ url_for('about') }}">About Us</a></li>
                             <li class="active"><a href="{{ url_for('contact') }}">Contact Us</a></li>
+                            {% if 'username' in session %}
+                            <li><a href="#">hi, {{session['username'] }}</a></li>
+                            <li><a href="{{ url_for('logout')}}">Logout</a></li>
+                            {% else %}
                             <li><a href="{{ url_for('login') }}">Sign Up</a></li>
+                            {% endif %}
                         </ul>
                     </div>
                 </div>
@@ -112,18 +117,17 @@
 						</address>
                             <p>
                                 <i class="icon-phone "></i> +91 1234567891<br>
-                                <i class="icon-envelope-alt "></i> info@tfortravel.in                            </p>
+                                <i class="icon-envelope-alt "></i> info@tfortravel.in </p>
                         </div>
                     </div>
                     <div class="col-lg-4 ">
                         <div class="widget ">
                             <h5 class="widgetheading ">Quick Links</h5>
                             <ul class="link-list ">
-                                <li><a href="./exam.html">Latest Website Update</a></li>
                                 <li><a href="#">Terms and conditions</a></li>
                                 <li><a href="#">Privacy policy</a></li>
-                                <li><a href="./about.html">About Us</a></li>
-                                <li><a href="./contact.html">Contact us</a></li>
+                                <li><a href="{{ url_for('about')}}">About Us</a></li>
+                                <li><a href="{{ url_for('contact')}}">Contact us</a></li>
                             </ul>
                         </div>
                     </div>
