--- a/templates/login.html
+++ b/templates/login.html
@@ -32,10 +32,15 @@
                     </div>
                     <div class="navbar-collapse collapse ">
                         <ul class="nav navbar-nav">
-                            <li><a href="{{ url_for('index') }}">Home</a></li>
-                            <li><a href="{{ url_for('contact')}}">Contact</a></li>
-                            <li class="active"><a href="{{ url_for('about')}}">About</a></li>
-                            <li><a href="{{ url_for('login') }}">Sign Up</a></li>
+                            <li><a href="{{ url_for('index')}}">Home</a></li>
+                            <li><a href="{{ url_for('about') }}">About Us</a></li>
+                            <li><a href="{{ url_for('contact') }}">Contact Us</a></li>
+                            {% if 'username' in session %}
+                            <li><a href="#">hi, {{session['username'] }}</a></li>
+                            <li><a href="{{ url_for('logout')}}">Logout</a></li>
+                            {% else %}
+                            <li class="active"><a href="{{ url_for('login') }}">Sign Up</a></li>
+                            {% endif %}
                         </ul>
                     </div>
                 </div>
