--- a/templates/about.html
+++ b/templates/about.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>T for Travel</title>
+    <link rel="icon" type="image/png" href="../static/img/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="" />
     <meta name="author" content="http://webthemez.com" />
