--- a/templates/destination.html
+++ b/templates/destination.html
@@ -3,18 +3,19 @@
 
 <head>
     <meta charset="utf-8">
-    <title>T for Travel: LogIn</title>
+    <title>T for Travel</title>
     <link rel="icon" type="image/png" href="../static/img/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="" />
-    <meta name="author" content="http://webthemez.com" />
     <!-- css -->
     <link href="../static/css/bootstrap.min.css" rel="stylesheet" />
     <link href="../static/css/fancybox/jquery.fancybox.css" rel="stylesheet">
     <link href="../static/css/jcarousel.css" rel="stylesheet" />
     <link href="../static/css/flexslider.css" rel="stylesheet" />
+    <link href="../static/js/owl-carousel/owl.carousel.css" rel="stylesheet">
     <link href="../static/css/style.css" rel="stylesheet" />
-    <link rel="stylesheet" href="../static/css/login.css">
+
+
 </head>
 
 <body>
@@ -31,62 +32,36 @@
                     </button>
                         <a class="navbar-brand" href="{{ url_for('index') }}"><img style="height: 60px; width: 250px;" src="../static/img/black-logo.png" alt="logo" /></a>
                     </div>
-                    <div class="navbar-collapse collapse ">
+                    <div class="navbar-collapse collapse">
                         <ul class="nav navbar-nav">
-                            <li><a href="{{ url_for('index')}}">Home</a></li>
+                            <li class="active"><a href="{{ url_for('index')}}">Home</a></li>
                             <li><a href="{{ url_for('about') }}">About Us</a></li>
                             <li><a href="{{ url_for('contact') }}">Contact Us</a></li>
                             {% if 'username' in session %}
                             <li><a href="#">hi, {{session['username'] }}</a></li>
                             <li><a href="{{ url_for('logout')}}">Logout</a></li>
                             {% else %}
-                            <li class="active"><a href="{{ url_for('login') }}">Sign Up</a></li>
+                            <li><a href="{{ url_for('login') }}">Sign Up</a></li>
                             {% endif %}
                         </ul>
                     </div>
                 </div>
             </div>
         </header>
-        <!-- end header -->
-        <section id="inner-headline">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12">
-                        <h2 class="pageTitle">LogIn/Register</h2>
-                    </div>
-                </div>
-            </div>
-        </section>
         <section>
-            <div class="hero">
-                <div class="form-box">
-                    <div class="button-box">
-                        <div id="btn"></div>
-                        <button type="button" class="toggle-btn" onclick="login()">Log In</button>
-                        <button type="button" class="toggle-btn" onclick="register()">Register</button>
-                    </div>
-
-                    <div class="soical-icons">
-                        <a href="#"><i class="fa fa-facebook-square  fa-6"></i></a>
-                        <a href="#"><i class="fa fa-google-plus-square fa-6"></i></a>
-                        <a href="#"><i class="fa fa-twitter-square fa-6"></i></a>
-                    </div>
-
-                    <form action="{{ url_for('login') }}" method="POST" id="login" class="input-group">
-                        <input type="text" name="username" class="input-field" placeholder="User Id" required />
-                        <input type="password" name="password" class="input-field" placeholder="Enter Password" required />
-                        <input type="checkbox" class="check-box" /><span>Remember Password</span>
-                        <button type="submit" class="submit-btn">Log In</button>
-                    </form>
-
-                    <form action="{{ url_for('register') }}" method="POST" id="register" class="input-group">
-                        <input type="text" name="username" class="input-field" placeholder="User Id" required />
-                        <input type="email" name="email" class="input-field" placeholder="Enter Email" required />
-                        <input type="password" name="password" class="input-field" placeholder="Enter Password" required />
-                        <input type="checkbox" class="check-box" /><span>I agree to the terms & conditions</span>
-                        <button type="submit" class="submit-btn">Register</button>
-                    </form>
+            <div class="container">
+                {% for index in all_documents %}
+                <div class="col-lg-7">
+                    <img src="{{ index['imgUrl']}}" alt="Image">
+                    <h2>{{ index['name'] }}</h2>
+                    <p>{{ index['address'] }}</p>
+                    <h3>{{ index['temp']}}</h3>
+                    <h3>{{ index['budget']}}</h3>
+                    <p>{{ index['about'] }}</p>
                 </div>
+                {% endfor %}
+            </div>
+            <div class="col-lg-3">
             </div>
         </section>
         <footer>
@@ -104,7 +79,7 @@
 						</address>
                             <p>
                                 <i class="icon-phone "></i> +91 12345 67891<br>
-                                <i class="icon-envelope-alt "></i> info@successconnect.in
+                                <i class="icon-envelope-alt "></i> info@tfortravel.in
                             </p>
                         </div>
                     </div>
@@ -112,11 +87,10 @@
                         <div class="widget ">
                             <h5 class="widgetheading ">Quick Links</h5>
                             <ul class="link-list ">
-                                <li><a href="./exam.html">Latest Website Update</a></li>
                                 <li><a href="#">Terms and conditions</a></li>
                                 <li><a href="#">Privacy policy</a></li>
-                                <li><a href="./about.html">About Us</a></li>
-                                <li><a href="./contact.html">Contact us</a></li>
+                                <li><a href="{{ url_for('about') }}">About Us</a></li>
+                                <li><a href="{{ url_for('contact') }}">Contact us</a></li>
                             </ul>
                         </div>
                     </div>
@@ -137,7 +111,9 @@
                     <div class="row ">
                         <div class="col-lg-6 ">
                             <div class="copyright ">
-
+                                <p>
+                                    <span>&copy; TforTravel, All right reserved. </span>
+                                </p>
                             </div>
                         </div>
                         <div class="col-lg-6 ">
@@ -154,23 +130,6 @@
             </div>
         </footer>
     </div>
-    <script>
-        var x = document.getElementById("login");
-        var y = document.getElementById("register");
-        var z = document.getElementById("btn");
-
-        function register() {
-            x.style.left = "-400px";
-            y.style.left = "50px";
-            z.style.left = "110px";
-        }
-
-        function login() {
-            x.style.left = "50px";
-            y.style.left = "450px";
-            z.style.left = "0";
-        }
-    </script>
     <a href="#" class="scrollup"><i class="fa fa-angle-up active"></i></a>
     <!-- javascript
     ================================================== -->
@@ -185,7 +144,7 @@
     <script src="../static/js/jquery.flexslider.js"></script>
     <script src="../static/js/animate.js"></script>
     <script src="../static/js/custom.js"></script>
-    <script src="../static/js/validate.js"></script>
+    <script src="../static/js/owl-carousel/owl.carousel.js"></script>
 </body>
 
 </html>
