--- a/templates/contact.html
+++ b/templates/contact.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="utf-8">
     <title>TforTravel:ContactUs</title>
-    <link rel="icon" type="image/png" href="../static/img/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="" />
     <!-- css -->
@@ -117,7 +116,7 @@
 						Mathura-281406<br>
 						</address>
                             <p>
-                                <i class="icon-phone "></i> +91 1234567891<br>
+                                <i class="icon-phone "></i> +91 12345 67891<br>
                                 <i class="icon-envelope-alt "></i> info@tfortravel.in </p>
                         </div>
                     </div>
