implimented search query

--- a/static/css/destination.scss
+++ b/static/css/destination.scss
@@ -79,14 +79,16 @@ body {
     display: inline-block;
 }
 
-.blog-card .details .main-city:before {
+.blog-card .details .author:before {
     font-family: FontAwesome;
     margin-right: 10px;
+    content: "\f007";
 }
 
-.blog-card .details .main-budget:before {
+.blog-card .details .date:before {
     font-family: FontAwesome;
     margin-right: 10px;
+    content: "\f133";
 }
 
 .blog-card .details .tags ul:before {
