--- a/templates/destination.html
+++ b/templates/destination.html
@@ -14,6 +14,7 @@
     <link href="../static/css/flexslider.css" rel="stylesheet" />
     <link href="../static/js/owl-carousel/owl.carousel.css" rel="stylesheet">
     <link href="../static/css/style.css" rel="stylesheet" />
+    <link rel="stylesheet" href="../static/css/destination.css">
 
 
 </head>
@@ -48,22 +49,33 @@
                 </div>
             </div>
         </header>
-        <section>
+        <section id="inner-headline">
             <div class="container">
-                {% for index in all_documents %}
-                <div class="col-lg-7">
-                    <img src="{{ index['imgUrl']}}" alt="Image">
-                    <h2>{{ index['name'] }}</h2>
-                    <p>{{ index['address'] }}</p>
-                    <h3>{{ index['temp']}}</h3>
-                    <h3>{{ index['budget']}}</h3>
-                    <p>{{ index['about'] }}</p>
+                <div class="row">
+                    <div class="col-lg-12">
+                        <h2 class="pageTitle">Search > {{ mycity }}</h2>
+                    </div>
                 </div>
-                {% endfor %}
-            </div>
-            <div class="col-lg-3">
             </div>
         </section>
+        {% for index in all_documents %}
+        <div class="blog-card">
+            <div class="meta">
+                <div class="photo">
+                    <img src="{{ index['imgUrl']}}" alt="">
+                </div>
+                <ul class="details">
+                    <li class="main-city"><a href="#">City: {{ index['city']}}</a></li>
+                    <li class="main-budget"><strong>Budget: {{ index['budget']}}</strong></li>
+                </ul>
+            </div>
+            <div class="description">
+                <h1>{{ index['name'] }}</h1>
+                <h2>Address: {{ index['address'] }}</h2>
+                <p>{{ index['about'] }}</p>
+            </div>
+        </div>
+        {% endfor %}
         <footer>
             <div class="container ">
                 <div class="row ">
