--- a/templates/destination.html
+++ b/templates/destination.html
@@ -62,7 +62,7 @@
         <div class="blog-card">
             <div class="meta">
                 <div class="photo">
-                    <img src="{{ index['imgUrl']}}" alt="">
+                    <img style="object-fit: scale-down !important;" src="{{ index['imgUrl']}}" alt="">
                 </div>
                 <ul class="details">
                     <li class="main-city"><a href="#">City: {{ index['city']}}</a></li>
