about us changed

--- a/templates/about.html
+++ b/templates/about.html
@@ -66,9 +66,7 @@
                         <div class="col-md-12">
                             <div class="about-logo">
                                 <h3> Our <span class="color">TEAM</span></h3>
-                                <p>Teamwork is the ability to work together toward a common vision. The ability to direct individual accomplishments toward organizational objectives. It is the fuel that allows common people to attain uncommon results.<br>                                    In Covid-19 period, Students had to leave this environment in order to stop the spread of Covid-19. Thus, online learning became a regular part of the students. Students were not able to solve their doubt in person
-                                    with their teachers,thus, it gave rise to an idea of developing a student friendly website Success Connect, which will be helping in their academics as well as in their overall development by inculcating moral values.
-
+                                <p>Teamwork is the ability to work together toward a common vision. The ability to direct individual accomplishments toward organizational objectives. It is the fuel that allows common people to attain uncommon results.<br>During this Covid-19 period, People had to stay at home and not move out of thier homes in order to break the chain stop the spread of Covid-19. Thus,it gave us the rise to an idea of developing a user friendly destination search platform, T for Travel. This Website will come in handy and help them in choosing thier next travel destination whenever they decide to step out of thier homes after this long break when the situation comes under control.
                                 </p>
                             </div>
                         </div>
@@ -80,10 +78,7 @@
                             <div class="block-heading-two">
                                 <h3><span>Why choose us?</span></h3>
                             </div>
-                            <p>Nowadays if a student has any doubt regarding their subject, competitive exam or future scope, they easily google it, but the problem remains same as google provides lots of web sites and web pages. So how can a student justify
-                                which suggestion or solution is accurate for them or not. Thus, our main objective is to provide an accurate website or platform where students can raise their queries and get justified solutions and suggestions on the
-                                basis of future scope too with righteous path.
-
+                            <p>T for Travel is an online Destination search platform that collates and suggests various Holiday destinations based upon your weather interests, budget options and the duration of your trip. Hence this site will come in handy for the users planning their next holiday trip to the most suitable destination according to their needs and requirements.
                             </p>
                         </div>
                         <hr>
@@ -105,9 +100,9 @@
                                     <!-- Team Member -->
                                     <div class="team-member">
                                         <!-- Image -->
-                                        <img style="border-radius: 20px;" class="img-responsive" src="../static/img/astha.jpg" alt="">
+                                        <img style="border-radius: 20px;" class="img-responsive" src="../static/img/anamikaimg.jpeg" alt="">
                                         <!-- Name -->
-                                        <h4>Astha Verma</h4>
+                                        <h4>Anamika Sharma</h4>
                                         <span class="deg">Founder & CEO</span>
                                     </div>
                                 </div>
@@ -125,20 +120,10 @@
                                     <!-- Team Member -->
                                     <div class="team-member">
                                         <!-- Image -->
-                                        <img style="border-radius: 20px;" class="img-responsive" src="../static/img/nazma.jpeg" alt="">
+                                        <img style="border-radius: 20px;" class="img-responsive" src="../static/img/deekshaimg.jpeg" alt="">
                                         <!-- Name -->
-                                        <h4>Nazia Farheen</h4>
+                                        <h4>Deeksha</h4>
                                         <span class="deg">Manager</span>
-                                    </div>
-                                </div>
-                                <div class="col-md-3 col-sm-6">
-                                    <!-- Team Member -->
-                                    <div class="team-member">
-                                        <!-- Image -->
-                                        <img style="border-radius: 20px;" class="img-responsive" src="../static/img/ritika1.jpeg" alt="ritika">
-                                        <!-- Name -->
-                                        <h4>Ritika Vershney</h4>
-                                        <span class="deg">Designer</span>
                                     </div>
                                 </div>
                             </div>
@@ -166,29 +151,27 @@
 						</address>
                             <p>
                                 <i class="icon-phone "></i> +91 12345 67891<br>
-                                <i class="icon-envelope-alt "></i> info@successconnect.in
-                            </p>
+                                <i class="icon-envelope-alt "></i> info@tfortravel.in </p>
                         </div>
                     </div>
                     <div class="col-lg-4 ">
                         <div class="widget ">
                             <h5 class="widgetheading ">Quick Links</h5>
                             <ul class="link-list ">
-                                <li><a href="./exam.html">Latest Website Update</a></li>
                                 <li><a href="#">Terms and conditions</a></li>
                                 <li><a href="#">Privacy policy</a></li>
-                                <li><a href="./about.html">About Us</a></li>
-                                <li><a href="./contact.html">Contact us</a></li>
+                                <li><a href="{{ url_for('about')}}">About Us</a></li>
+                                <li><a href="{{ url_for('contact')}}">Contact us</a></li>
                             </ul>
                         </div>
                     </div>
                     <div class="col-lg-4 ">
                         <div class="widget ">
-                            <h5 class="widgetheading ">Latest posts</h5>
+                            <h5 class="widgetheading ">Helpful Links</h5>
                             <ul class="link-list ">
-                                <li><a href="# ">Kubernetes and its use-cases</a></li>
-                                <li><a href="# ">GitHub Copilot , AI programmer that helps you code better</a></li>
-                                <li><a href="# ">MongoDB as Database</a></li>
+                                <li><a href="https://www.euttaranchal.com/tourism/dehradun.php">Dehradun Travel Guide</a></li>
+                                <li><a href="https://mybiz.makemytrip.com/v2/">Travel Agent Companies - Simplifying Business Travel</a></li>
+                                <li><a href="https://www.cozi.com/blog/vacation-packing-checklist/">Vacation Packing Checklist</a></li>
                             </ul>
                         </div>
                     </div>
@@ -200,7 +183,7 @@
                         <div class="col-lg-6 ">
                             <div class="copyright ">
                                 <p>
-                                    <span>&copy; SuccessConnect, All right reserved. </span>
+                                    <span>&copy; T for Travel, All right reserved. </span>
                                 </p>
                             </div>
                         </div>
@@ -217,6 +200,7 @@
                 </div>
             </div>
         </footer>
+
         </div>
         <a href="#" class="scrollup"><i class="fa fa-angle-up active"></i></a>
         <!-- javascript
