--- a/templates/login.html
+++ b/templates/login.html
@@ -104,29 +104,27 @@
 						</address>
                             <p>
                                 <i class="icon-phone "></i> +91 12345 67891<br>
-                                <i class="icon-envelope-alt "></i> info@successconnect.in
-                            </p>
+                                <i class="icon-envelope-alt "></i> info@tfortravel.in </p>
                         </div>
                     </div>
                     <div class="col-lg-4 ">
                         <div class="widget ">
                             <h5 class="widgetheading ">Quick Links</h5>
                             <ul class="link-list ">
-                                <li><a href="./exam.html">Latest Website Update</a></li>
                                 <li><a href="#">Terms and conditions</a></li>
                                 <li><a href="#">Privacy policy</a></li>
-                                <li><a href="./about.html">About Us</a></li>
-                                <li><a href="./contact.html">Contact us</a></li>
+                                <li><a href="{{ url_for('about')}}">About Us</a></li>
+                                <li><a href="{{ url_for('contact')}}">Contact us</a></li>
                             </ul>
                         </div>
                     </div>
                     <div class="col-lg-4 ">
                         <div class="widget ">
-                            <h5 class="widgetheading ">Latest posts</h5>
+                            <h5 class="widgetheading ">Helpful Links</h5>
                             <ul class="link-list ">
-                                <li><a href="# ">Kubernetes and its use-cases</a></li>
-                                <li><a href="# ">GitHub Copilot , AI programmer that helps you code better</a></li>
-                                <li><a href="# ">MongoDB as Database</a></li>
+                                <li><a href="https://www.euttaranchal.com/tourism/dehradun.php">Dehradun Travel Guide</a></li>
+                                <li><a href="https://mybiz.makemytrip.com/v2/">Travel Agent Companies - Simplifying Business Travel</a></li>
+                                <li><a href="https://www.cozi.com/blog/vacation-packing-checklist/">Vacation Packing Checklist</a></li>
                             </ul>
                         </div>
                     </div>
@@ -137,7 +135,9 @@
                     <div class="row ">
                         <div class="col-lg-6 ">
                             <div class="copyright ">
-
+                                <p>
+                                    <span>&copy; T for Travel, All right reserved. </span>
+                                </p>
                             </div>
                         </div>
                         <div class="col-lg-6 ">
