--- a/templates/index.html
+++ b/templates/index.html
@@ -100,9 +100,7 @@
                     <div class="col-lg-12">
                         <div class="aligncenter">
                             <h1 class="aligncenter">YOUR <strong>JOURNEY</strong> IS OUR PRIORITY</h1><span class="clear spacer_responsive_hide_mobile " style="height:13px;display:block;"></span>
-                            <p style="text-align: justify;">Success connect is for students from fourth grade to intermediate. Here we provide an educational environment for students. Students can raise their queries here and other students will resolve their problems which are selected
-                                as volunteers. It will help students in gaining self-confidence, increase their knowledge and develop a helping nature in them for growing together.</p>
-
+                            <p style="text-align: justify;">T for Travel is an online Destination search platform that collates and suggests various Holiday destinations based upon your weather interests, budget options and the duration of your trip. Hence this site will come in handy for the users planning their next holiday trip to the most suitable destination according to their needs and requirements.</p>
                         </div>
                     </div>
                 </div>
@@ -130,13 +128,13 @@
                         </ol>
                         <div class="carousel-inner">
                             <div class="item">
-                                <p style="text-align: center;">Knowledge shared = Knowledge2</p>
+                                <p style="text-align: center;">Life is a journey, not a destination” – Ralph Waldo Emerson</p>
                             </div>
                             <div class="item">
-                                <p style="text-align: center;">Knowledge is like a GARDEN if it is not CULTIVATED it cannot be HARVESTED.</p>
+                                <p style="text-align: center;">” The real voyage of discovery consists not in seeking new landscapes, but in having new eyes.” ~ Marcel Proust</p>
                             </div>
                             <div class="item active">
-                                <p style="text-align: center;">Gaining knowledge, is the first step to wisdom, Sharing it, is the first step to humanity.
+                                <p style="text-align: center;">“Travel doesn’t become adventure until you leave yourself behind”
                                 </p>
                             </div>
                         </div>
@@ -146,7 +144,7 @@
         </div>
         <section class="container" style="margin: 20px auto;">
             <div class="col-lg-12 main-search">
-                <h2 style="margin: 10px 300px;">Search Your Favourite Place</h2>
+                <h2 style="margin: 10px 300px;">Search Your Destination</h2>
                 <form action="{{ url_for('search') }}" method="get" class="form-area">
                     <div class="search1">
                         <input type="text" name="city" placeholder="Enter State Name" class="city">
@@ -169,33 +167,34 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="aligncenter">
-                            <h2 class="aligncenter">Interesting Blog Post About Top Destinations</h1>
+                            <h2 class="aligncenter">Interesting Blog Posts About Top Destinations</h1>
                         </div>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-md-4">
                         <div class="textbox">
-                            <img src="../static/img/uttar pradesh/jama.jpg" alt="" style="width: 300px; height: 250px; margin-top: 20px;">
-                            <h3 style="text-decoration: underline;">Kubernetes and its use-cases</h3>
-                            <p style="text-align: justify;">Kubernetes is an open-source popular platform for container orchestration that is, for the management of applications built out of multiple, largely self-contained run-times called containers. Containers becomes popular when
-                                the docker containerization project launched in 2013..<a href="https://theoutliners.in/kubernetes-and-its-use-cases-with-the-pinterest/" target="_blank" rel="noopener noreferrer">Read More</a></p>
+                            <img src="../static/img/uttar pradesh/Hawa-Mahal.jpg" alt="" style="width: 300px; height: 250px; margin-top: 20px;">
+                            <h3 style="text-decoration: underline;">Jaipur - Beyond the Pink of the City | untravel Blog</h3>
+                            <p style="text-align: justify;">India’s official ‘pink city’, there’s much more to Rajasthan’s capital than its pink-red-tinged buildings and historic splendour. This majestic home to erstwhile royals is complete with old-world charm surrounded by colorful markets and chaotic streets. A part of the ‘Golden Triangle, Jaipur is a must-visit destination along with Agra and New Delhi...<a href="https://blog.untravel.com/jaipur/" target="_blank" rel="noopener noreferrer">Read More</a></p>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="textbox">
-                            <img src="../static/img/uttar pradesh/jama.jpg" alt="" style="width: 300px; height: 250px; margin-top: 20px;">
-                            <h3 style="text-decoration: underline;">GitHub Copilot , AI programmer that helps you code better</h3>
-                            <p style="text-align: justify;">GitHub in collaboration with Open AI has just dropped the technical preview of an AI pair programmer called GitHub Copliot, which is a code synthesizer that can generate code based on the context it extracts from the comments
-                                or the code you’ve already written....<a href="https://theoutliners.in/github-copilot-ai-programmer-that-helps-you-code-better/" target="_blank" rel="noopener noreferrer">Read More</a></p>
+                            <img src="../static/img/uttar pradesh/Dehradun.png" alt="" style="width: 300px; height: 250px; margin-top: 20px;">
+                            <h3 style="text-decoration: underline;">Attractions in Dehradun , Uttarakhand | Aloktomar's Blog</h3>
+                            <p style="text-align: justify;">Dehradun is one of the most visited tourist attractions in Uttarakhand, mostly as a brief stopover en route Mussoorie. Located on the foothills of the Himalayan mountain range Dehradun is a striking yet serene place. It is thought to be one of the oldest (read as ancient) cities in India.Indications of Dehradun ...<a href="https://aloktomar.wordpress.com/attractions-in-dehradun/" target="_blank" rel="noopener noreferrer">Read More</a></p>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="textbox">
-                            <img src="../static/img/uttar pradesh/jama.jpg" alt="" style="width: 300px; height: 250px; margin-top: 20px;">
-                            <h3 style="text-decoration: underline;">MongoDB as Database</h3>
-                            <p style="text-align: justify;">MongoDB is Document-oriented NoSQL database used for storing the data. It is different from other databases due to its no structured or schema less feature. In all the traditional databases there is row and column but, in the
-                                MongoDB, we have collections and documents....<a href="https://theoutliners.in/mongodb-with-adobe/" target="_blank" rel="noopener noreferrer">Read More</a></p>
+                            <img src="../static/img/uttar pradesh/kolkata.jpg" alt="" style="width: 300px; height: 250px; margin-top: 20px;">
+                            <h3 style="text-decoration: underline;">To Kolkata with Love: A Photo Blog Depicting Kolkata Culture</h3>
+                            <p style="text-align: justify;">About this Blog: I am a Kolkata girl. If you scratch my hands a little, you will see Kolkata in blood.
+
+                                I do not live in Kolkata anymore. It is painfully overwhelming to even try to write about home. So, I decided to let the pictures talk on my behalf.
+                                
+                                These pictures are clicked over a couple of years as I was visiting the erstwhile capital of British India...<a href="https://www.orangewayfarer.com/kolkata-culture-love-photoblog/" target="_blank" rel="noopener noreferrer">Read More</a></p>
                         </div>
                     </div>
                 </div>
@@ -216,8 +215,7 @@
 						</address>
                             <p>
                                 <i class="icon-phone "></i> +91 12345 67891<br>
-                                <i class="icon-envelope-alt "></i> info@tfortravel.in
-                            </p>
+                                <i class="icon-envelope-alt "></i> info@tfortravel.in </p>
                         </div>
                     </div>
                     <div class="col-lg-4 ">
@@ -226,18 +224,18 @@
                             <ul class="link-list ">
                                 <li><a href="#">Terms and conditions</a></li>
                                 <li><a href="#">Privacy policy</a></li>
-                                <li><a href="{{ url_for('about') }}">About Us</a></li>
-                                <li><a href="{{ url_for('contact') }}">Contact us</a></li>
+                                <li><a href="{{ url_for('about')}}">About Us</a></li>
+                                <li><a href="{{ url_for('contact')}}">Contact us</a></li>
                             </ul>
                         </div>
                     </div>
                     <div class="col-lg-4 ">
                         <div class="widget ">
-                            <h5 class="widgetheading ">Latest posts</h5>
+                            <h5 class="widgetheading ">Helpful Links</h5>
                             <ul class="link-list ">
-                                <li><a href="# ">Kubernetes and its use-cases</a></li>
-                                <li><a href="# ">GitHub Copilot , AI programmer that helps you code better</a></li>
-                                <li><a href="# ">MongoDB as Database</a></li>
+                                <li><a href="https://www.euttaranchal.com/tourism/dehradun.php">Dehradun Travel Guide</a></li>
+                                <li><a href="https://mybiz.makemytrip.com/v2/">Travel Agent Companies - Simplifying Business Travel</a></li>
+                                <li><a href="https://www.cozi.com/blog/vacation-packing-checklist/">Vacation Packing Checklist</a></li>
                             </ul>
                         </div>
                     </div>
@@ -249,7 +247,7 @@
                         <div class="col-lg-6 ">
                             <div class="copyright ">
                                 <p>
-                                    <span>&copy; TforTravel, All right reserved. </span>
+                                    <span>&copy; T for Travel, All right reserved. </span>
                                 </p>
                             </div>
                         </div>
