--- a/templates/destination.html
+++ b/templates/destination.html
@@ -13,6 +13,7 @@
     <link href="../static/css/jcarousel.css" rel="stylesheet" />
     <link href="../static/css/flexslider.css" rel="stylesheet" />
     <link href="../static/js/owl-carousel/owl.carousel.css" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="../static/css/style.css" rel="stylesheet" />
     <link rel="stylesheet" href="../static/css/destination.css">
 
