--- a/templates/about.html
+++ b/templates/about.html
@@ -66,7 +66,10 @@
                         <div class="col-md-12">
                             <div class="about-logo">
                                 <h3> Our <span class="color">TEAM</span></h3>
-                                <p>Teamwork is the ability to work together toward a common vision. The ability to direct individual accomplishments toward organizational objectives. It is the fuel that allows common people to attain uncommon results.<br>During this Covid-19 period, People had to stay at home and not move out of thier homes in order to break the chain stop the spread of Covid-19. Thus,it gave us the rise to an idea of developing a user friendly destination search platform, T for Travel. This Website will come in handy and help them in choosing thier next travel destination whenever they decide to step out of thier homes after this long break when the situation comes under control.
+                                <p>Teamwork is the ability to work together toward a common vision. The ability to direct individual accomplishments toward organizational objectives. It is the fuel that allows common people to attain uncommon results.<br>During
+                                    this Covid-19 period, People had to stay at home and not move out of thier homes in order to break the chain stop the spread of Covid-19. Thus,it gave us the rise to an idea of developing a user friendly destination
+                                    search platform, T for Travel. This Website will come in handy and help them in choosing thier next travel destination whenever they decide to step out of thier homes after this long break when the situation comes under
+                                    control.
                                 </p>
                             </div>
                         </div>
@@ -78,7 +81,8 @@
                             <div class="block-heading-two">
                                 <h3><span>Why choose us?</span></h3>
                             </div>
-                            <p>T for Travel is an online Destination search platform that collates and suggests various Holiday destinations based upon your weather interests, budget options and the duration of your trip. Hence this site will come in handy for the users planning their next holiday trip to the most suitable destination according to their needs and requirements.
+                            <p>T for Travel is an online Destination search platform that collates and suggests various Holiday destinations based upon your weather interests, budget options and the duration of your trip. Hence this site will come in handy
+                                for the users planning their next holiday trip to the most suitable destination according to their needs and requirements.
                             </p>
                         </div>
                         <hr>
@@ -92,15 +96,13 @@
                         </div>
                         <br>
 
-                        <!-- Our team starts -->
-
                         <div class="team-six">
                             <div class="row">
                                 <div class="col-md-3 col-sm-6">
                                     <!-- Team Member -->
                                     <div class="team-member">
                                         <!-- Image -->
-                                        <img style="border-radius: 20px;" class="img-responsive" src="../static/img/anamikaimg.jpeg" alt="">
+                                        <img style="border-radius: 20px; height: 280px;" class="img-responsive" src="../static/img/anamikaimg.jpeg" alt="">
                                         <!-- Name -->
                                         <h4>Anamika Sharma</h4>
                                         <span class="deg">Founder & CEO</span>
